# users_and_tasks

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test_database_setup.md  test_db.db
alembic/: env.py
alembic/versions/: 2479ab2d230f_initial_tables.py  a6d05692f71a_add_base_structure.py
app/: __init__.py  config.py  database.py  db.py  main.py
app/auth/: __init__.py  auth.py  jwt.py
app/dal/: task.py  user.py
app/errors/: __init__.py  task_errors.py
app/managers/: __init__.py  task.py
app/models/: __init__.py  models.py  task_model.py  user.py  user_model.py
app/oauth/: user_manager.py
app/repositories/: __init__.py  task.py  user.py
app/routes/: __init__.py  authenticated.py  tasks.py  users.py
app/schemas/: __init__.py  tasks.py  users.py
test/: conftest.py  test_auth.py  test_dal.py  test_users.py
tests/: conftest.py  mock_db.py  mock_repositories.py  test_auth.py  test_dal.py  test_database.py  test_managers.py  test_repository.py  test_routes_tasks.py
