[tool.poetry]
name = "users-and-tasks"
version = "0.1.0"
description = ""
authors = ["Alex Poltorapavlov <poltorapavlov.iskander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.34.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
